Add PAM auth backend support and harden installer UFW step

--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,7 @@ SMTP_INSECURE_SKIP_VERIFY=false
 
 DOVECOT_AUTH_DB_DRIVER=
 DOVECOT_AUTH_DB_DSN=
+DOVECOT_AUTH_MODE=sql
 DOVECOT_AUTH_TABLE=users
 DOVECOT_AUTH_EMAIL_COL=email
 DOVECOT_AUTH_PASS_COL=password_hash
