Investigate UI auth failures

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ SESSION_IDLE_MINUTES=30
 SESSION_ABSOLUTE_HOURS=24
 SESSION_ENCRYPT_KEY=CHANGE_THIS_TO_A_LONG_RANDOM_32_PLUS_CHAR_SECRET
 CSRF_COOKIE_NAME=mailclient_csrf
+COOKIE_SECURE_MODE=auto
 COOKIE_SECURE=false
 TRUST_PROXY=false
 CORS_ALLOWED_ORIGINS=
