--- a/.env.example
+++ b/.env.example
@@ -55,6 +55,18 @@ PASSWORD_RESET_SENDER=log
 PASSWORD_RESET_FROM=webmaster@example.com
 PASSWORD_RESET_BASE_URL=
 
+UPDATE_ENABLED=true
+UPDATE_REPO_OWNER=2high4schooltoday
+UPDATE_REPO_NAME=new-mail-client
+UPDATE_CHECK_INTERVAL_MIN=60
+UPDATE_HTTP_TIMEOUT_SEC=10
+UPDATE_GITHUB_TOKEN=
+UPDATE_BACKUP_KEEP=3
+UPDATE_BASE_DIR=/var/lib/mailclient/update
+UPDATE_INSTALL_DIR=/opt/mailclient
+UPDATE_SERVICE_NAME=mailclient
+UPDATE_SYSTEMD_UNIT_DIR=/etc/systemd/system
+
 # Optional emergency bootstrap (normally keep empty and use web OOBE).
 BOOTSTRAP_ADMIN_EMAIL=
 BOOTSTRAP_ADMIN_PASSWORD=
