--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,13 @@ TRUST_PROXY=false
 CORS_ALLOWED_ORIGINS=
 
 CAPTCHA_ENABLED=false
+# Providers: turnstile | hcaptcha | cap
 CAPTCHA_PROVIDER=turnstile
+# For CAP provider, set your public site key.
+CAPTCHA_SITE_KEY=
+# Public widget API base for CAP, e.g. /cap/<site_key>/ when proxied by nginx/apache.
+CAPTCHA_WIDGET_API_URL=
+# Verification endpoint from app host, e.g. http://127.0.0.1:8077/<site_key>/siteverify
 CAPTCHA_VERIFY_URL=
 CAPTCHA_SECRET=
 
